--- a/djangoproject/gestion_stock/templates/registration/register.html
+++ b/djangoproject/gestion_stock/templates/registration/register.html
@@ -32,7 +32,7 @@
                     <button type="submit" class="btn btn-sm btn-grey" >Valider</button>
                 </form>
             </div>
-            <div class="col-6 mt-5">
+            <div class="col mt-5">
                 <div class="border shadow-lg bg-white rounded col mr-2 tohide">
                     <table id="dtBasicExample" class="table table-hover" cellspacing="0" width="100%">
                         <thead>
@@ -358,7 +358,6 @@
         top: -70px;
         left: -9px;
     }
-
 </style>
 
 <div class="gandalf">
@@ -374,6 +373,7 @@
         <div class="beard"></div>
     </div>
 </div>
+
 <div class="message">
     <h1>403 - Tu Ne Passeras Pas</h1>
     <p>Uh oh, Gandalf bloque la voie!<br/>Peut-être que tu t'es trompé dans ta manipulation? Ou tu veux aller autre part ? Aux...Hobbiton?</p>
