--- a/djangoproject/gestion_stock/templates/bonCommandeSortiemodify.html
+++ b/djangoproject/gestion_stock/templates/bonCommandeSortiemodify.html
@@ -40,28 +40,24 @@
     </form>-->
     </div>
 </div>
-</div>
 
 <div class="container">
     <div class="row">
         <div class="col">
-            <div class="border shadow-lg pl-2 mb-3 bg-white rounded" style="position:relative;">
+            <div class="border shadow-lg pl-2 mb-3 bg-white rounded">
                 <div class="row">
-                    <div class="col"></div>
                     <div class="col">
-                        <h3 class="text-center"> identifiant BC-S</h3>
-                    </div>
-                    <div class="col pl-5">
-                        <button id="createbls" style="" class="btn btn-primary btn-sm ml-5"> Crée Bl sorties</button>
+                    <h3 class="text-center"> identifiant BC-S</h3>
+                    <br>
+                    <button id="createbls" style="" class="btn btn-primary btn-sm"> Crée Bl sorties</button>
                     </div>
                 </div>
-                <br>
                 <div class="row">
                     <div class="col ml-4">
                         <label for="idbcs">identifiant :</label>
                         <input type="text" id="idbcs" class="form-control-plaintext w-75 text-center" disabled>
                         <label for="datec">date de commande :</label>
-                        <input type="date" id="datec" class="form-control datepicker" data-date-format="mm/yyyy/dd">
+                        <input type="date" id="datec" class="form-control datepicker w-75" data-date-format="mm/yyyy/dd">
                         <!--<input type="date" id="datec" class="form-control w-75 text-center">-->
                         <br>
                         <label for="client"> client :</label>
@@ -181,10 +177,10 @@
                 <br>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-auto">
             <div class="border shadow-lg p-3 pb-4 mb-5 bg-white rounded">
-                <div class="table-responsive">
                     <h4 class="text-center"><b>UM sortie</b></h4>
+                    <div class="table-responsive">
                     <table id="umtab" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                         <thead>
                         <tr>
@@ -236,13 +232,10 @@
                 </div>
             </div>
         </div>
-
-
     </div>
 </div>
-</div>
 
-<div class="container text-center" style="width: 100%;">
+<div class="container text-center">
     <div class="row">
         <div class="col-auto">
             <div class="border shadow-lg p-3 mb-5 bg-white rounded">
