--- a/djangoproject/gestion_stock/templates/bonLivraisonSortiemodify.html
+++ b/djangoproject/gestion_stock/templates/bonLivraisonSortiemodify.html
@@ -190,7 +190,7 @@
                 <br>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-auto">
             <div class="border shadow-lg p-3 pb-4 mb-5 bg-white rounded">
                 <div class="table-responsive">
                     <h4 class="text-center"><b>UM sortie</b></h4>
