--- a/djangoproject/gestion_stock/templates/client.html
+++ b/djangoproject/gestion_stock/templates/client.html
@@ -29,9 +29,9 @@
 
 <div class="container">
   <div class="form-group row text-center">
-    <div class="col">
+    <!--<div class="col">
       <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
-    </div>
+    </div>-->
     <div class="col">
       <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
     </div>
@@ -41,7 +41,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <div class="border shadow-lg p-3 mb-5 bg-white rounded">
+      <div class="border shadow-lg p-3 mb-5 bg-white rounded table-responsive">
         <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
           <thead>
           <tr>
@@ -53,9 +53,9 @@
           <tbody>
           {% for items in cli %}
           <tr>
-            <td> <button id='{{ items.idClient }}' class="dyna"> -> </button></td>
-            <td> {{ items.nom }} </td>
-            <td> <button id='{{ items.idClient }}' class="dynad"> X </button> </td>
+            <td> <button id='{{ items.idClient }}' class="dyna btn-sm btn-outline-blue-grey"> <i class="fa fa-edit"></i> </button></td>
+            <td class="text-center"> {{ items.nom }} </td>
+            <td class="text-right"> <button id='{{ items.idClient }}' class="dynad btn-sm btn-outline-red"> <i class="fa fa-minus"></i> </button> </td>
           </tr>
           {% endfor %}
           </tbody>
@@ -73,52 +73,53 @@
       </div>
     </div>
   </div>
+</div>
 
-  <script type="text/javascript">
+<script type="text/javascript">
 
-    $(document).ready(function () {
-      $('#dtBasicExample').DataTable();
-      $('.dataTables_length').addClass('bs-select');
-      $('#clients').fadeTo("slow", 0.5);
-    });
+  $(document).ready(function () {
+    $('#dtBasicExample').DataTable();
+    $('.dataTables_length').addClass('bs-select');
+    $('#clients').fadeTo("slow", 0.5);
+  });
 
-    $("#create-row").click(function() {
-      location.href = "{% url 'clientadd' %}";
-    });
+  $("#create-row").click(function() {
+    location.href = "{% url 'clientadd' %}";
+  });
 
-    $(document).on("click", "button.dyna" , function(e) { // event pour modifier les entree transporteur
-      var idClicked = e.target.id;
-      var name = "";
-      var trueid = 0;
-      //alert(idClicked);
-      "{% for items in cli %}"
-      if ('{{ items.idClient }}' == idClicked) {
-        name = '{{ items.nom }}';
-        trueid = '{{ items.id }}';
+  $(document).on("click", "button.dyna" , function(e) { // event pour modifier les entree transporteur
+    var idClicked = e.target.id;
+    var name = "";
+    var trueid = 0;
+    //alert(idClicked);
+    "{% for items in cli %}"
+    if ('{{ items.idClient }}' == idClicked) {
+      name = '{{ items.nom }}';
+      trueid = '{{ items.id }}';
+    }
+    "{% endfor %}"
+    window.location.href = "{% url 'clientmodify' %}?id=" + idClicked + "&" + "name=" + name + "&" + "trueid=" + trueid;
+  });
+
+  $(document).on("click", "button.dynad" , function(e) { // event pour delete la ligne sélectionner
+    var idClicked = e.target.id;
+    //alert(idClicked);
+    $.ajax({
+      type:"POST",    //type de requête utilisé par ajax
+      url:"/delete_cli/", //lien de la view qui gère la requête post pour supprimer une entree
+      data: {
+        'name': $('#nom').val(), // nom du transporteur récuperer dans le input #nom
+        'id': idClicked, // id du transporteur acquis grace a une incrementation en js
+        csrfmiddlewaretoken: '{{ csrf_token }}'
+      },
+      success: function(msg, data, settings){
+        //alert("gg " + msg);
+      },
+      failure: function() {
+        alert("fail");
       }
-      "{% endfor %}"
-      window.location.href = "{% url 'clientmodify' %}?id=" + idClicked + "&" + "name=" + name + "&" + "trueid=" + trueid;
     });
+  });
 
-    $(document).on("click", "button.dynad" , function(e) { // event pour delete la ligne sélectionner
-      var idClicked = e.target.id;
-      //alert(idClicked);
-      $.ajax({
-        type:"POST",    //type de requête utilisé par ajax
-        url:"/delete_cli/", //lien de la view qui gère la requête post pour supprimer une entree
-        data: {
-          'name': $('#nom').val(), // nom du transporteur récuperer dans le input #nom
-          'id': idClicked, // id du transporteur acquis grace a une incrementation en js
-          csrfmiddlewaretoken: '{{ csrf_token }}'
-        },
-        success: function(msg, data, settings){
-          //alert("gg " + msg);
-        },
-        failure: function() {
-          alert("fail");
-        }
-      });
-    });
-
-  </script>
-  {% endblock %}
+</script>
+{% endblock %}
