--- a/djangoproject/gestion_stock/templates/clientadd.html
+++ b/djangoproject/gestion_stock/templates/clientadd.html
@@ -20,9 +20,9 @@
         <div class="col">
             <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
         </div>
-        <div class="col">
+        <!--<div class="col">
             <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
-        </div>
+        </div>-->
     </div>
 </div>
 
