--- a/djangoproject/gestion_stock/templates/create_type_fournisseur.html
+++ b/djangoproject/gestion_stock/templates/create_type_fournisseur.html
@@ -13,10 +13,11 @@
         </div>
     </div>
 </div>
+
 <div class="container">
     <div class="row">
         <div class="col">
-            <div class="border shadow-lg p-3 mb-5 bg-white rounded">
+            <div class="border shadow-lg p-3 mb-5 bg-white rounded table-responsive">
                 <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                     <thead>
                     <tr>
