--- a/djangoproject/gestion_stock/templates/destinataire.html
+++ b/djangoproject/gestion_stock/templates/destinataire.html
@@ -29,9 +29,9 @@
 
 <div class="container">
   <div class="form-group row text-center">
-    <div class="col">
+    <!--<div class="col">
       <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
-    </div>
+    </div>-->
     <div class="col">
       <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
     </div>
@@ -88,11 +88,11 @@
           <tbody>
           {% for items in des %}
           <tr>
-            <td> <button id='{{ items.idDestinataire }}' class="dyna"> -> </button></td>
+            <td> <button id='{{ items.idDestinataire }}' class="dyna btn-sm btn-outline-blue-grey"> <i class="fa fa-edit"></i> </button></td>
             <td> {{ items.fk_TypeDestinataire }} </td>
             <td> {{ items.nom }} </td>
             <td> {{ items.codeUM }} </td>
-            <td> <button id='{{ items.idDestinataire }}' class="dynad"> X </button> </td>
+            <td> <button id='{{ items.idDestinataire }}' class="dynad btn-sm btn-outline-red"> <i class="fa fa-minus"></i> </button> </td>
           </tr>
           {% endfor %}
           </tbody>
@@ -100,7 +100,11 @@
           <tr>
             <th> modify
             </th>
-            <th>nom
+            <th>type destinataire
+            </th>
+            <th>destinataire
+            </th>
+            <th>code UM
             </th>
             <th>delete
             </th>
