--- a/djangoproject/gestion_stock/templates/destinatairemodify.html
+++ b/djangoproject/gestion_stock/templates/destinatairemodify.html
@@ -18,7 +18,7 @@
 <br>
 
 <div class="container">
-    <div class="form-group row text-center">
+    <div class="form-group row">
         <div class="col">
             <i class="fa fa-chevron-circle-left" style="font-size:45px;cursor: pointer;"></i>
         </div>
@@ -40,7 +40,7 @@
             <h3 class="text-center"> identification </h3>
             <br>
             <div class="">
-                identifiant:<br><input type="text" id="umid" name="id_transporteur" disabled>
+                identifiant:<br><input type="text" id="umid" name="id_transporteur" class="form-control-sm rounded-pill w-25" readonly="">
             </div>
             <div>
                 nom: <br><input type="text" id="nom" name="nom_transporteur">
@@ -66,7 +66,7 @@
             <div class="border shadow-lg p-3 mb-5 bg-white rounded">
                 <h3 class="text-center"> UM sortie non expédiés </h3>
                 <br>
-                <div class="border shadow-lg p-3 mb-5 bg-white rounded">
+                <div class="border shadow-lg mb-1 bg-white rounded table-responsive">
                     <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                         <thead class="thead-dark">
                         <tr>
@@ -94,7 +94,6 @@
                     </table>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col">
                     <div class="border shadow-lg p-3 mb-5 bg-white rounded">
