--- a/djangoproject/gestion_stock/templates/fournisseur.html
+++ b/djangoproject/gestion_stock/templates/fournisseur.html
@@ -41,7 +41,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <div class="border shadow-lg p-3 mb-5 bg-white rounded">
+      <div class="border shadow-lg p-3 mb-5 bg-white rounded table-responsive">
         <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
           <thead>
           <tr>
@@ -53,9 +53,9 @@
           <tbody>
           {% for items in four %}
           <tr>
-            <td> <button id='{{ items.idFournisseur }}' class="dyna"> -> </button></td>
-            <td> {{ items.nom|safe }} </td>
-            <td> <button id='{{ items.idFournisseur }}' class="dynad"> X </button> </td>
+            <td> <button id='{{ items.idFournisseur }}' class="dyna btn-sm btn-outline-blue-grey"> <i class="fa fa-edit"></i> </button></td>
+            <td class="text-center"> {{ items.nom|safe }} </td>
+            <td class="text-right"> <button id='{{ items.idFournisseur }}' class="dynad btn-sm btn-outline-red"> <i class="fa fa-minus"></i> </button> </td>
           </tr>
           {% endfor %}
           </tbody>
@@ -73,9 +73,9 @@
       </div>
     </div>
   </div>
+</div>
 
   <script type="text/javascript">
-
     $(document).ready(function () {
       $('#dtBasicExample').DataTable();
       $('.dataTables_length').addClass('bs-select');
