--- a/djangoproject/gestion_stock/templates/transporteur.html
+++ b/djangoproject/gestion_stock/templates/transporteur.html
@@ -29,9 +29,9 @@
 
 <div class="container">
   <div class="form-group row text-center">
-    <div class="col">
+    <!--<div class="col">
       <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
-    </div>
+    </div>-->
     <div class="col">
       <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
     </div>
@@ -73,7 +73,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <div class="border shadow-lg p-3 mb-5 bg-white rounded">
+      <div class="border shadow-lg p-3 mb-5 bg-white rounded table-responsive">
         <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
           <thead>
           <tr>
@@ -85,9 +85,9 @@
           <tbody>
           {% for items in trans %}
           <tr>
-            <td> <button id='{{ items.idTransporteur }}' class="dyna"> -> </button></td>
-            <td> {{ items.nom }} </td>
-            <td> <button id='{{ items.idTransporteur }}' class="dynad"> X </button> </td>
+            <td> <button id='{{ items.idTransporteur }}' class="dyna btn-sm btn-outline-blue-grey"> <i class="fa fa-edit"></i> </button></td>
+            <td class="text-center"> {{ items.nom }} </td>
+            <td class="text-right"> <button id='{{ items.idTransporteur }}' class="dynad btn-sm btn-outline-red"> <i class="fa fa-minus"></i> </button> </td>
           </tr>
           {% endfor %}
           </tbody>
