--- a/djangoproject/gestion_stock/templates/unitemanutentionentree.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentree.html
@@ -42,7 +42,7 @@
                         <tr>
                             <td> <button type="button" id='{{ items.idUniteManutentionEntree }}' class="dyna btn btn-sm btn-outline-grey rounded"> <i class="fa fa-arrow-right"></i> </button></td>
                             <td> {{ items.fk_ZoneDepot.nom }} </td>
-                            <td> {{ items.fk_BonLivraisonEntree.fk_ZoneDepot_pour_TypeZoneDepot.fk_TypeZoneDepot.nom }} </td>
+                            <td> {{ items.fk_ZoneDepot.fk_TypeZoneDepot.nom }} </td>
                             <td> {{ items.fk_BonLivraisonEntree.numeroBonLivraison }} </td>
                             <td> {{ items.c_horodatage }} </td>
                             {% if items.fk_BonLivraisonEntree %}
