--- a/djangoproject/gestion_stock/templates/unitemanutentionentreereference.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentreereference.html
@@ -41,8 +41,9 @@
     {% endif %}
 </div>
 
-<div class="row" style="width: 100%;">
-    <div class="col-5 mx-auto">
+<div class="container-fluid">
+<div class="row">
+    <div class="col">
         <div class="border shadow-lg bg-white rounded">
             <div class="table-responsive">
                 <table id="tabume" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
@@ -58,7 +59,6 @@
                     </tr>
                     </thead>
                     <tbody>
-
                     </tbody>
                     <tfoot>
                     <tr class="text-center">
@@ -75,7 +75,7 @@
             </div>
         </div>
     </div>
-    <div class="col-5 mx-auto">
+    <div class="col">
         <div class="border shadow-lg bg-white rounded">
             <div class="table-responsive">
                 <table id="tablbc" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
@@ -105,9 +105,8 @@
             </div>
         </div>
     </div>
-
 </div>
-
+</div>
 
 </body>
 <script type="text/javascript">
