--- a/djangoproject/gestion_stock/templates/articleemplacement.html
+++ b/djangoproject/gestion_stock/templates/articleemplacement.html
@@ -33,7 +33,7 @@
         <div class="col">
             <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Retour</button>
         </div>
-        <div class="col">
+        <div class="col-auto">
             <select id="selectzone" class="form-control-plaintext"> <option>Tout</option></select>
         </div>
         <div class="col">
